--- a/css/style_wa4.css
+++ b/css/style_wa4.css
@@ -1,40 +1,74 @@
 /* General styles - put these straight into your stylesheet */
 
-body {
-    margin: 0;
-  }
-  
-  html {
-    font-family: 'Helvetica neue', Arial, 'sans serif';
-    font-size: 10px;
-    background-color: #ccc;
-  }
-  
-  /* Selectors to be matched up with rulesets */
- 
-  
-  /* Rulesets to be matched up with selectors */
-  
-  .card{
-    width: 35em;
-    height: 22em;
-    margin: 5em auto;
-    background-color: red;
-    border: 0.2em solid black;
-    border-radius: 1.5em;
-  }
-  
-  .card header{
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
-    border-radius: 1.5em 1.5em 0 0;
-  }
-  
-  .card footer{
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
-    border-radius: 0 0 1.5em 1.5em;
-  }
-  
-  .card article img{
-    max-height: 50%;
-    float: right;
-  }
+/* Selectors to be matched up with rulesets */
+
+/* Rulesets to be matched up with selectors */
+.card {
+  width: 35em;
+  height: 22em;
+  margin: 5em auto;
+  background-color: red;
+  border: 0.2em solid black;
+  border-radius: 1.5em;
+}
+
+.card article {
+  height: 7.5em;
+  padding: 0.625em;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.card header {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+  height: 3.125em; /* 30px in em units */
+  padding: 0.625em; /* 10px in em units */
+  border-radius: 1.5em 1.5em 0 0;
+}
+
+.card footer {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+  height: 3.125em; /* 30px in em units */
+  padding: 0.625em; /* 10px in em units */
+  border-radius: 0 0 1.5em 1.5em;
+  font-size: 1em; /* 15px in em units (15 / 15 = 1) */
+  line-height: 30px; /* Matching the content box height of 30px */
+  margin: 0;
+}
+
+.card article img {
+  float: right;
+  max-height: 100%;
+}
+
+h2, p {
+  margin: 0;
+}
+
+.card header h2 {
+  font-size: 2em; /* 20px in em units */
+  line-height: 30px; /* Matching the content box height of 30px */
+  margin: 0;
+  padding: 0.5em;
+}
+
+.card footer p {
+  font-size: 1.5em; /* 15px in em units */
+  line-height: 30px; /* Matching the content box height of 30px */
+  margin: 0;
+  text-align: center; 
+}
+
+.card article p {
+  /* font-size: 1.33em; 20px in em units */
+  /* line-height: 1.67; Calculate line height to center text vertically within the 120px article height (120px / 72px = 1.67) */
+  margin: 0;
+  padding-left: 20px; /* Adjust as needed to align with the header and footer */
+  color: #a8a5a5; /* Light color for readability */
+}
+
+
+
+
+
+
+
