--- a/css/style_wa4.css
+++ b/css/style_wa4.css
@@ -7,37 +7,40 @@
   width: 35em;
   height: 22em;
   margin: 5em auto;
-  background-color: red;
+  background-color: plum;
   border: 0.2em solid black;
   border-radius: 1.5em;
 }
 
 .card article {
-  height: 7.5em;
-  padding: 0.625em;
-  background-color: rgba(0, 0, 0, 0.5);
+  height: 12em;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .card header {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
-  height: 3.125em; /* 30px in em units */
+  height: 1.875em; /* 30px in em units */
   padding: 0.625em; /* 10px in em units */
+  padding-top: 20px;
+  padding-bottom: 20px;
   border-radius: 1.5em 1.5em 0 0;
 }
 
 .card footer {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-  height: 3.125em; /* 30px in em units */
+  height: 3em; /* 30px in em units */
   padding: 0.625em; /* 10px in em units */
+  padding-top: 30px;
+  padding-bottom: 30px;
   border-radius: 0 0 1.5em 1.5em;
   font-size: 1em; /* 15px in em units (15 / 15 = 1) */
-  line-height: 30px; /* Matching the content box height of 30px */
   margin: 0;
 }
 
 .card article img {
   float: right;
   max-height: 100%;
+  /* padding: 10px; */
 }
 
 h2, p {
@@ -45,25 +48,27 @@ h2, p {
 }
 
 .card header h2 {
-  font-size: 2em; /* 20px in em units */
+  font-size: 1.8em; 
   line-height: 30px; /* Matching the content box height of 30px */
   margin: 0;
-  padding: 0.5em;
+  padding-left: 10px;
+  /* padding: 0.5em; */
 }
 
 .card footer p {
   font-size: 1.5em; /* 15px in em units */
   line-height: 30px; /* Matching the content box height of 30px */
   margin: 0;
-  text-align: center; 
+  padding-left: 10px;
 }
 
 .card article p {
-  /* font-size: 1.33em; 20px in em units */
-  /* line-height: 1.67; Calculate line height to center text vertically within the 120px article height (120px / 72px = 1.67) */
+  font-size: 0.9375em;
+  padding: 10px;
+  line-height: 24px;; 
   margin: 0;
-  padding-left: 20px; /* Adjust as needed to align with the header and footer */
-  color: #a8a5a5; /* Light color for readability */
+  padding-left: 20px;
+  color: #ffffff; /* Light color for readability */
 }
 
 
