--- a/css/style_wa4.css
+++ b/css/style_wa4.css
@@ -7,17 +7,26 @@
   width: 35em;
   height: 22em;
   margin: 5em auto;
-  background-color: plum;
+  background-color: red;
   border: 0.2em solid black;
   border-radius: 1.5em;
 }
+.card2 {
+  font-family:'Courier New', Courier, monospace;
+  width: 35em;
+  height: 22em;
+  margin: 5em auto;
+  background-color: plum;
+  border: 0.2em solid purple;
+  border-radius: 1.5em;
+}
 
-.card article {
+.card article, .card2 article {
   height: 12em;
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.card header {
+.card header, .card2 header {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
   height: 1.875em; /* 30px in em units */
   padding: 0.625em; /* 10px in em units */
@@ -26,18 +35,18 @@
   border-radius: 1.5em 1.5em 0 0;
 }
 
-.card footer {
+.card footer, .card2 footer {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-  height: 3em; /* 30px in em units */
+  height: 2em; /* 30px in em units */
   padding: 0.625em; /* 10px in em units */
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 0 0 1.5em 1.5em;
-  font-size: 1em; /* 15px in em units (15 / 15 = 1) */
+  font-size: 1.1em; /* 15px in em units (15 / 15 = 1) */
   margin: 0;
 }
 
-.card article img {
+.card article img, .card2 article img {
   float: right;
   max-height: 100%;
   /* padding: 10px; */
@@ -47,7 +56,7 @@ h2, p {
   margin: 0;
 }
 
-.card header h2 {
+.card header h2, .card2 header h2{
   font-size: 1.8em; 
   line-height: 30px; /* Matching the content box height of 30px */
   margin: 0;
@@ -55,14 +64,14 @@ h2, p {
   /* padding: 0.5em; */
 }
 
-.card footer p {
+.card footer p, .card2 footer p {
   font-size: 1.5em; /* 15px in em units */
   line-height: 30px; /* Matching the content box height of 30px */
   margin: 0;
   padding-left: 10px;
 }
 
-.card article p {
+.card article p, .card2 article p {
   font-size: 0.9375em;
   padding: 10px;
   line-height: 24px;; 
