--- a/css/style_wa4.css
+++ b/css/style_wa4.css
@@ -5,7 +5,7 @@
 /* Rulesets to be matched up with selectors */
 html {
   font-family: 'Helvetica neue', Arial, 'sans serif';
-  font-size: 16px;
+  font-size: 10px;
   background-color: #ccc;
 }
 
@@ -34,21 +34,17 @@ html {
 
 .card header, .card2 header {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
-  height: 1.875em; /* 30px in em units */
-  padding: 0.625em; /* 10px in em units */
-  padding-top: 20px;
-  padding-bottom: 20px;
+  height: 3em; 
+  padding: 1em; 
   border-radius: 1.5em 1.5em 0 0;
 }
 
 .card footer, .card2 footer {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-  height: 2em; /* 30px in em units */
-  padding: 0.625em; /* 10px in em units */
-  padding-top: 30px;
-  padding-bottom: 30px;
+  height: 3em; 
+  padding: 1em;
   border-radius: 0 0 1.5em 1.5em;
-  font-size: 1.1em; /* 15px in em units (15 / 15 = 1) */
+  font-size: 1em; 
   margin: 0;
 }
 
@@ -63,29 +59,37 @@ h2, p {
 }
 
 .card header h2, .card2 header h2{
-  font-size: 1.8em; 
-  line-height: 30px; /* Matching the content box height of 30px */
+  font-size: 2em; 
+  line-height: 30px; 
   margin: 0;
   padding-left: 10px;
   /* padding: 0.5em; */
 }
 
 .card footer p, .card2 footer p {
-  font-size: 1.5em; /* 15px in em units */
-  line-height: 30px; /* Matching the content box height of 30px */
+  font-size: 1.5em; 
+  line-height: 30px; 
   margin: 0;
   padding-left: 10px;
 }
 
-.card article p, .card2 article p {
+.card article p {
   font-size: 0.9375em;
   padding: 10px;
-  line-height: 24px;; 
+  line-height: 15px; 
   margin: 0;
   padding-left: 20px;
   color: #ffffff; /* Light color for readability */
 }
 
+.card2 article p {
+  font-size: 0.9375em;
+  padding: 10px;
+  line-height: 13px; 
+  margin: 0;
+  padding-left: 20px;
+  color: #ffffff; /* Light color for readability */
+}
 
 
 
