--- a/wa/wa7.html/styles.css
+++ b/wa/wa7.html/styles.css
@@ -55,6 +55,11 @@ body {
     margin: 0;
     padding: 0;
   }
+  .photos li{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 1px;
+  }
 
   .feature {
       width: 200px;
