--- a/wa/wa7.html/styles.css
+++ b/wa/wa7.html/styles.css
@@ -18,19 +18,21 @@ body {
   }
   
   .grid {
-    display: flex;
-    width: min(95%);
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
+    
   }
   
   nav {
     background-color: #000;
     padding: 0.5em;
     padding-bottom: 1.5em;
+    align-items: center;
     position: sticky;
     top: 0;
+    display: flex;
+    justify-content: space-between;
   }
   li{
     float: left;
@@ -40,6 +42,7 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
   }
   
   nav a {
@@ -51,14 +54,17 @@ body {
   }
   
   .photos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     list-style: none;
     margin: 0;
     padding: 0;
   }
   .photos li{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr); */
     margin: 1px;
+    
   }
 
   .feature {
@@ -67,3 +73,60 @@ body {
       margin: 0.5em;
       margin-left: 0;
   }
+
+  @media only screen and (min-width: 500px) {
+    .grid {
+      display: flex;
+    }
+    article {
+      order: 1;
+    }
+  
+    aside {
+      order: 2;
+    }
+  }
+  @media only screen and (max-width: 900px) {
+    .grid {
+      justify-content: center;
+    }
+  
+    article {
+      flex: 1;
+      order: 1;
+      max-width: 50%;
+    }
+  
+    aside {
+      flex: 1;
+      order: 2;
+      max-width: 50%;
+    }
+    nav ul {
+      flex-direction: column;
+      align-items: center;
+    }
+    
+    nav a {
+      margin: 1em 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .grid {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    article,
+    aside {
+      flex: 1;
+      max-width: 100%;
+    }
+  }
+
+  
+  
+  
+  
+  
