--- a/css_midterm/style1.css
+++ b/css_midterm/style1.css
@@ -1,7 +1,7 @@
 
 .slice--event-group .slice--event {
     height: 100%;
-    padding-bottom: 200px;
+    padding-bottom: 12vh;
     position: relative;
     width: 100%;
 }
@@ -11,7 +11,13 @@
 * {
     box-sizing: border-box;
 }
-
+h1{
+    padding-top: 12vh;
+    color: white;
+    text-align: center;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
 article {
     display: flexbox;
     
@@ -61,7 +67,17 @@ html {
     background-color: purple;
 }
 .subtitle{
-    color: #2b2d2f;
+    color: #fff;
+    font-size: 0.2rem;
+}
+.button{
+    border: #0c0c0c solid 1px;
+    text-align: center;
+}
+.subtitle:hover{
+        color: #2b2d2f;
+        font-size: 1rem;
+   
 }
 .title{
     font-size: 2rem;
@@ -72,16 +88,43 @@ html {
     text-align: center;
 }
 
+.grid-container {
+    display: grid;
+    gap: 2vh;
+  }
+  .item1 {
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .item2 {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding-bottom: 3vh;
+  }
 @media only screen and (max-width: 400px) {
     .title{
         font-size: 1rem;
     }
     body{
         font-size: 0.5em;
-        line-height: 0.75;
+        
     }
+    .content--inner{
+        margin: 1vh;
+        padding: 1vh;
+    }
+    .subtitle{
+        font-size: 0.1rem;
+    }
+    .subtitle:hover{
+        color: #2b2d2f;
+        font-size: 0.5rem;
+   
+}
     .content{
-        padding: 5vh;
+        margin: 1vh;
+        padding: 1vh;
+        padding-top: 0;
     }
   }
 
