--- a/css_midterm/style1.css
+++ b/css_midterm/style1.css
@@ -21,8 +21,9 @@ h1{
     font-size: 3rem;
 }
 article {
-    display: flexbox;
-    
+    display: flex;
+    flex-direction: column;
+
 }
 .text-center {
     text-align: center;
@@ -106,6 +107,9 @@ html {
     padding-bottom: 3vh;
   }
 @media only screen and (max-width: 400px) {
+    article{
+        flex-direction: column;
+      }
     .title{
         font-size: 1rem;
     }
@@ -135,3 +139,8 @@ html {
     }
   }
 
+  @media (max-width: 1500px) {
+    article{
+      flex-direction: column;
+    }
+  }
