--- a/wa/gallery-start/style.css
+++ b/wa/gallery-start/style.css
@@ -16,6 +16,11 @@ body {
   width: 640px;
   height: 480px;
 }
+.displayed-img{
+  width: 640px;
+  height: 480px;
+
+}
 
 .overlay {
   position: absolute;
