--- a/wa/wa12/wa12.css
+++ b/wa/wa12/wa12.css
@@ -45,7 +45,7 @@ button:hover {
 @media screen and (max-width: 600px) {
     body{
       width: 100%;
-      font-size: 20;
+      font-size: 20px;
     }
     .quote-text {
       font-size: 15px;
